--- a/src/app/components/inicio/inicio.component.css
+++ b/src/app/components/inicio/inicio.component.css
@@ -1,61 +1,12 @@
-/*
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
-/*
-body{
-  background-color: #000000ca;
-}
-*/
 .container_principal{
   position: relative;
   top: 100%;
   left: 0.1%;
   width: 100%;
   height: 100%;
- /* padding: 40px;*/
-  /*transform: translate(-50%, -50%); */
 }
 
-
-/*titulo
-  .heatitulo {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 30px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #333;
-    color: #fff;
-    padding: 7px;
-    max-width: 100%;
-  }
-  
-  .h1titulo {
-    position: absolute;
-    top: 20%;
-    left: 8%;
-    transform: translate(-70%, -50%);
-    max-width: 90%;
-  }
-  
-  #titulo {
-    font-family: "Arial Black", Arial, sans-serif;
-    font-size: 1.3rem;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 36%; 
-  }
-  
-  #titulo span {
-    display: inline-block;
-    transform-origin: center center;
-  }
-
- 
-/*boton abrir navegacion izquierda*/
-
+/*butt para abrir el menu despegable*/
 .abrir-navegacion {
     position: fixed; 
     top: 3.5%; 
@@ -74,19 +25,15 @@ body{
 
   .abrir-navegacion:hover {
     background-color: #ffffff;
-
-
-    
     border-radius: 15px;
     box-shadow: 0 0 5px #01ff62a1,
                 0 0 25px #01ff62a1,
                 0 0 25px #01ff62a1,
                 0 0 25px #01ff62a1;
-
-  }
+}
 
 /*navegacion izquieda*/
-  .menu {
+.menu {
     position: fixed;
     top: 0;
     left: -40%;
@@ -124,53 +71,47 @@ body{
   .menu a {
     color: #e75e14;
     text-decoration: none;
-  }
+}
 
 /*divicion de pagina*/
 .contenedor {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    /*background-color: #da0641;*/
   }
   
   .columna-izquierda{
     flex-basis: 5%;
-    
     flex-grow: 1; 
-   background-color: #000000;
-   
+    background-color: #000000;
   }
   .columna-derecha {
     flex-basis: 5%;
     flex-grow: 1; 
     background-color: #000000;
-    
   }
   
   .columna-central {
     flex-basis: 1000px;
     background-color: #333;
     border-radius: 20px;
-  }
+}
 
 /*titulo de la empresa*/
-
-  .titulo-empresa{
-  color: #ffffff;
-  font: normal 140px Varela Round, sans-serif;
-  height: px;
-  left: 0;
-  letter-spacing: 10px;
-  text-align: center;
-  text-transform: uppercase;
-  width: 100%;
-  animation: animar linear 5000ms infinite;
-  z-index: 10;
-  font-size: 40px;
-  margin-top: 20px;
+.titulo-empresa{
+    color: #ffffff;
+    font: normal 140px Varela Round, sans-serif;
+    height: px;
+    left: 0;
+    letter-spacing: 10px;
+    text-align: center;
+    text-transform: uppercase;
+    width: 100%;
+    animation: animar linear 5000ms infinite;
+    z-index: 10;
+    font-size: 40px;
+    margin-top: 20px;
   }
-
   
   @keyframes animar {
     0% {
@@ -221,7 +162,7 @@ body{
         
       ;
     }
-  }
+}
 
 /*imagen*/
   .conteinerimgs { 
@@ -237,8 +178,7 @@ body{
   }
 
 /*menu de pagina principal */
- 
-  .menuclas {
+.menuclas {
     text-align: center;
   }
  
@@ -271,158 +211,145 @@ body{
   }
 
   /*horas estras*/
-    .bolita-1 {
-      position: absolute;
-      top: -200px; 
-      left: 150px; 
-    }
+  .bolita-1 {
+    position: absolute;
+    top: -200px; 
+    left: 150px; 
+  }
 
-    .nombreuno {
-      font-family: "Helvetica", Arial, sans-serif;
-      position: absolute;
-      top: -140px; 
-      left: 130px; 
-      font-size: 20px;
-      color: #ff0303;
-      white-space: nowrap;
-    }
+  .nombreuno {
+    font-family: "Helvetica", Arial, sans-serif;
+    position: absolute;
+    top: -140px; 
+    left: 130px; 
+    font-size: 20px;
+    color: #ff0303;
+    white-space: nowrap;
+  }
 
-    .bolita:hover + .nombreuno {
-      color: #3cff00; 
-    }
+  .bolita:hover + .nombreuno {
+    color: #3cff00; 
+  }
 
   /*asistencia*/
-    .bolita-2 {
-      position: absolute;
-      top: 10px; 
-      left: 475px; 
-    }
+  .bolita-2 {
+    position: absolute;
+    top: 10px; 
+    left: 475px; 
+  }
 
-    .nombredos {
-      font-family: "Helvetica", Arial, sans-serif;
-      position: absolute;
-      top: 70px; 
-      left: 460px; 
-      font-size: 20px;
-      color: #ff0303;
-    }
-    .bolita:hover + .nombredos {
-      color: #3cff00; 
-    }
+  .nombredos {
+    font-family: "Helvetica", Arial, sans-serif;
+    position: absolute;
+    top: 70px; 
+    left: 460px; 
+    font-size: 20px;
+    color: #ff0303;
+  }
+  .bolita:hover + .nombredos {
+    color: #3cff00; 
+  }
 
   /*incapacidad */
+  .bolita-3 {
+    position: absolute;
+    top: -200px; 
+    left: 800px; 
+  }
 
-    .bolita-3 {
-      position: absolute;
-      top: -200px; 
-      left: 800px; 
-    }
+  .nombretres {
+    font-family: "Helvetica", Arial, sans-serif;
+    position: absolute;
+    top: -140px; 
+    left: 780px; 
+    font-size: 20px;
+    color: #ff0303;
+  }
 
-    .nombretres {
-      font-family: "Helvetica", Arial, sans-serif;
-      position: absolute;
-      top: -140px; 
-      left: 780px; 
-      font-size: 20px;
-      color: #ff0303;
-    }
-
-    .bolita:hover + .nombretres  {
-      color: #3cff00; 
-    }
+  .bolita:hover + .nombretres  {
+    color: #3cff00; 
+  }
 
   /*registrar nuevo empoleado*/
-    .cuadradouno {
-      font-family: "Helvetica", Arial, sans-serif;
-      position: absolute;
-      top: -350px; 
-      left: 1px; 
-      background-color: #000000;
-      display: block;
-      padding: 10px 30px;
-      margin: 0 10px;
-      border: 2px solid #ffffff;
-      border-radius: 50px;
-      font-size: 20px;
-      color: #ffffff;
-      white-space: nowrap; 
-      text-decoration: none; 
-    }
+  .cuadradouno {
+    font-family: "Helvetica", Arial, sans-serif;
+    position: absolute;
+    top: -350px; 
+    left: 1px; 
+    background-color: #000000;
+    display: block;
+    padding: 10px 30px;
+    margin: 0 10px;
+    border: 2px solid #ffffff;
+    border-radius: 50px;
+    font-size: 20px;
+    color: #ffffff;
+    white-space: nowrap; 
+    text-decoration: none; 
+  }
 
-    .cuadradouno:hover {
-      color: #00ff00; 
-      text-decoration: underline; 
-      border-color: #00ff00;
-    }
+  .cuadradouno:hover {
+    color: #00ff00; 
+    text-decoration: underline; 
+    border-color: #00ff00;
+  }
 
   /* borrar empleado*/
-    .cuadradodos {
-      font-family: "Helvetica", Arial, sans-serif;
-      position: absolute;
-      top: -300px; 
-      left: 1px; 
-      background-color: #000000;
-      display: block;
-      padding: 10px 30px;
-      margin: 0 10px;
-      border: 2px solid #ffffff;
-      border-radius: 50px;
-      font-size: 20px;
-      color: #ffffff;
-      white-space: nowrap; 
-      text-decoration: none; 
-    }
+  .cuadradodos {
+    font-family: "Helvetica", Arial, sans-serif;
+    position: absolute;
+    top: -300px; 
+    left: 1px; 
+    background-color: #000000;
+    display: block;
+    padding: 10px 30px;
+    margin: 0 10px;
+    border: 2px solid #ffffff;
+    border-radius: 50px;
+    font-size: 20px;
+    color: #ffffff;
+    white-space: nowrap; 
+    text-decoration: none; 
+  }
 
-    .cuadradodos:hover {
-      color: #00ff00; 
-      text-decoration: underline; 
-      border-color: #00ff00; 
-    }
+  .cuadradodos:hover {
+    color: #00ff00; 
+    text-decoration: underline; 
+    border-color: #00ff00; 
+  }
 
   /*inventario*/
-    .cuadradotres {
-      font-family: "Helvetica", Arial, sans-serif;
-      
-      position: absolute;
-      top: -350px; 
-      left: 825px; 
+  .cuadradotres {
+    font-family: "Helvetica", Arial, sans-serif;
+    position: absolute;
+    top: -350px; 
+    left: 825px; 
+    background-color: #000000;
+    display: block;
+    padding: 10px 30px;
+    margin: 0 10px;
+    border: 2px solid #ffffff;
+    border-radius: 50px;
+    font-size: 20px;
+    color: #ffffff;
+    white-space: nowrap; 
+    text-decoration: none;
+    position: relative;
+  }
 
-      
-    
-      background-color: #000000;
-      
-      display: block;
-      padding: 10px 30px;
-      margin: 0 10px;
-      
-      border: 2px solid #ffffff;
-      border-radius: 50px;
-      font-size: 20px;
-      color: #ffffff;
-      white-space: nowrap; 
-      text-decoration: none;
-      
-      position: relative;
-      
-    }
-
-    .cuadradotres:hover {
-      color: #00ff00; 
-      text-decoration: underline; 
-      border-color: #00ff00;
-    }
+  .cuadradotres:hover {
+    color: #00ff00; 
+    text-decoration: underline; 
+    border-color: #00ff00;
+}
 
 
 /*botón de cierre de sesión */
-  .cerrar-seccion {
+.cerrar-seccion {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 10px;
-   /* position: fixed;
-    z-index: 1000;
-    top: 5px;
-    right: 1%;*/
   }
 
   .boton-cerrar {
@@ -442,136 +369,10 @@ body{
 
   .boton-cerrar:hover {
     background-color: #ff0000;
-
     border-radius: 15px;
     box-shadow: 0 0 5px #e01616a1,
                 0 0 25px #e01616a1,
                 0 0 25px #e01616a1,
                 0 0 25px #e01616a1;
-  }
+}
 
-
-/*
-  
-.container_login .olvi_a:hover {
-   background: #97ea09;
-   color: #fff;
-   border-radius: 5px;
-   box-shadow: 0 0 5px #e01616a1,
-               0 0 25px #e01616a1,
-               0 0 25px #e01616a1,
-               0 0 25px #e01616a1;
-}*/
-
-
-/*pie de pagina
-  body .pie_pagina {
-    margin-top: 90px;
-    z-index: 1;
-    --footer-background: #050404;
-    display: grid;
-    position: relative;
-    grid-area: footer;
-    min-height: 12rem;
-  }
-
-  body .pie_pagina .contenedor_circulos {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 1rem;
-    background: var(--footer-background);
-    filter: url("#blob");
-  }
-
-  body .pie_pagina .contenedor_circulos .circulo {
-    position: absolute;
-    left: var(--position, 50%);
-    background-color: #00ff91;
-    border-radius: 100%;
-    -webkit-animation: bubble-size var(--time, 4s) ease-in infinite var(--delay, 0s), bubble-move var(--time, 4s) ease-in infinite var(--delay, 0s);
-    animation: bubble-size var(--time, 4s) ease-in infinite var(--delay, 0s), bubble-move var(--time, 4s) ease-in infinite var(--delay, 0s);
-    transform: translate(-50%, 100%);
-  }
-
-  body .pie_pagina .content {
-    z-index: 2;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 2rem;
-    padding: 2rem;
-    background: var(--footer-background);
-    word-wrap: break-word;
-  }
-
-  body .pie_pagina .content a {
-    color: rgb(141, 136, 136);
-    text-decoration: none;
-  }
-
-  body .pie_pagina .content b {
-    color: rgb(141, 136, 136);
-
-  }
-
-  body .pie_pagina .content span {
-    color: rgb(255, 0, 0);
-  }
-
-  @-webkit-keyframes bubble-size {
-
-    0%,
-    75% {
-        width: var(--size, 4rem);
-        height: var(--size, 4rem);
-    }
-
-    100% {
-        width: 0rem;
-        height: 0rem;
-    }
-  }
-
-  @keyframes bubble-size {
-
-    0%,
-    75% {
-        width: var(--size, 4rem);
-        height: var(--size, 4rem);
-    }
-
-    100% {
-        width: 0rem;
-        height: 0rem;
-    }
-  }
-
-  @-webkit-keyframes bubble-move {
-    0% {
-        bottom: -4rem;
-    }
-
-    100% {
-        bottom: var(--distance, 10rem);
-    }
-  }
-
-  @keyframes bubble-move {
-    0% {
-        bottom: -4rem;
-    }
-
-    100% {
-        bottom: var(--distance, 10rem);
-    }
-  }
-
-/*creditos
-  body .creditos {
-    grid-column: 1/-1;
-    text-align: center;
-    padding: 1rem;
-    background: #333;
-    color: #fff;
-  }*/
