--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,28 +1,12 @@
 
-<!--div>
-    <h2>login</h2>
-    <div>
-        <label for="email">email</label>
-        <input [(ngModel)]="user.email" type="email"  name="email">
-    </div>
-    <div>
-        <label for="password">password</label>
-        <input [(ngModel)]="user.password" type="password" name="password">
-    </div>
-    <div>
-        <button (click)="logIn()">ingresar</button>
-    </div>
-
-</div-->
 <body>
-   
-   
    
 <div class="contenedor">
     
     <div class="columna-izquierda"></div>
 
     <div class="columna-central">
+
         <br><br><br><br>
         <div class="estilo">
             <h2 class="titulo-empresa">Inicio sesion</h2>
@@ -30,41 +14,33 @@
 
         <div class="container">
             
-            
-            
-            
-    <!--i class="fa-solid fa-user icon"></i>
-                <fa-icon [icon]="['fas', 'user']" class="icon"></fa-icon-->
             <div class="cont_icon">
-                
-                
                 <i class="fa-solid fa-user icon"></i>
             </div>
            
-           
-           
             <div class="container_login">
-            
-                
-                
-            
     
-    
+                <!--animacion de gargando imagen-->
+                <div class="cargando-overlay" *ngIf="loading">
+                    <div class="cargando-alert">
+                        <div class="spinner"></div>
+                        <div>Cargando...</div>
+                     </div>
+                </div>
+
                 <h2 class="login_h2">Administrativo</h2>
                 <form class="login_form">
                     <div class="cont_user_pass">
                         <input [(ngModel)]="user.correo" class="input_login" type="email" name="correo" required="">
-                        <label class="label_login" form="correo">email</label>
+                        <label class="label_login" form="correo">Dirección de correo electrónico</label>
                     </div>
                     <div class="cont_user_pass">
                         <input  [(ngModel)]="user.password" class="input_login" id="password" type="password" name="password" required="" #password>
                         <span class="password-logo" id="logoojo" #logoojo><i class="fa-solid fa-eye-slash ojoicon"></i></span>
-                        <label form="password" class="label_login" >contraseña</label>
+                        <label form="password" class="label_login" >Contraseña</label>
                     </div>
     
                         <a class="olvi_a" href="#">Olvidé mi contraseña</a>
-    
-                   
     
                         <button (click)="logIn()" class="login_a" type="submit">
                             <span class="ligin_spam">__</span><!--arriba-->
@@ -73,6 +49,7 @@
                             <span class="ligin_spam">**</span><!--subir-->
                             Iniciar Sesión
                         </button>
+
                         <a class="login_b" routerLink="/registro" routerLinkActive="active">
                             <span class="ligin_spam">__</span><!--arriba-->
                             <span class="ligin_spam"></span><!--bajando-->
@@ -80,14 +57,8 @@
                             <span class="ligin_spam">**</span><!--subir-->
                             Registrarme
                         </a>
-    
-                
-    
-                    
-    
                 </form>
             </div>
-    
         </div>
         <!--a routerLink="/admin" routerLinkActive="active">admin</a><br>
         <a routerLink="/empleado" routerLinkActive="active">empleado</a>
@@ -98,17 +69,10 @@
         <a routerLink="/login" routerLinkActive="active">login</a><br>
         <a routerLink="/empleado" routerLinkActive="active">empleado</a-->
 
-       
     </div>        
-
     <div class="columna-derecha"></div>
 
-
-
-
 </div>
-   
-    
 </body>
 <router-outlet></router-outlet>
 
